[2019-04-24 17:09:18.526] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:09:18.526] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:11:18.117] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:49:44.378] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:59:47.228] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:59:47.228] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:59:47.228] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 17:59:47.228] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 18:12:04.555] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 18:12:04.555] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 18:12:04.555] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 18:12:04.555] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 18:14:01.517] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 18:14:01.517] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 18:14:01.517] [logger] [info] Material 0 was added to project A Great Movie
[2019-04-24 18:14:01.517] [logger] [info] Material 0 was added to project A Great Movie