@@ -112,3 +112,7 @@
 [2019-04-24 18:14:01.517] [logger] [info] Material 0 was added to project A Great Movie
 [2019-04-24 18:14:01.517] [logger] [info] Material 0 was added to project A Great Movie
 [2019-04-24 18:14:01.517] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 18:22:50.572] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 18:22:50.572] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 18:22:50.572] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 18:22:50.572] [logger] [info] Material 0 was added to project A Great Movie
